--- a/vue-murex-frontend/package.json
+++ b/vue-murex-frontend/package.json
@@ -23,9 +23,10 @@
     "@nuxt/bridge": "npm:@nuxt/bridge-edge@^3.0.0-27338323.1e98259",
     "@nuxtjs/style-resources": "^1.2.1",
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "autoprefixer": "^10.4.1",
     "fibers": "^5.0.0",
     "node-sass": "^7.0.1",
-    "postcss": "^8.4.4",
+    "postcss": "^8.4.5",
     "sass": "^1.45.1",
     "sass-loader": "^10.2.0"
   }
