--- a/vue-murex-frontend/package.json
+++ b/vue-murex-frontend/package.json
@@ -15,6 +15,7 @@
     "nuxt-edge": "latest",
     "nuxt-i18n": "^6.28.1",
     "vue": "^2.6.14",
+    "vue-carousel": "^0.18.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
