--- a/vue-murex-frontend/package.json
+++ b/vue-murex-frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxi dev",
+    "dev": "nuxi dev --port 3001",
     "build": "nuxi build",
     "start": "nuxi preview"
   },
