--- a/vue-murex-frontend/package.json
+++ b/vue-murex-frontend/package.json
@@ -16,6 +16,7 @@
     "nuxt-i18n": "^6.28.1",
     "vue": "^2.6.14",
     "vue-carousel": "^0.18.0",
+    "vue-nuxt-pro": "file:",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
@@ -25,7 +26,6 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "autoprefixer": "^10.4.1",
-    "fibers": "^5.0.0",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.5",
     "sass": "^1.45.1",
