--- a/vue-murex-frontend/package.json
+++ b/vue-murex-frontend/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxi dev --port 3001",
-    "build": "nuxi build",
-    "start": "nuxi preview"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "preview": "nuxi preview"
   },
   "dependencies": {
     "@nuxtjs/i18n": "^7.2.0",
     "core-js": "^3.19.3",
     "nuxi": "^0.10.1",
     "nuxi-edge": "^3.0.0-27338323.1e98259",
+    "nuxt": "^2.15.8",
     "nuxt-edge": "latest",
     "nuxt-i18n": "^6.28.1",
     "vue": "^2.6.14",
@@ -26,7 +28,6 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "autoprefixer": "^10.4.1",
-    "node-sass": "^7.0.1",
     "postcss": "^8.4.5",
     "sass": "^1.45.1",
     "sass-loader": "^10.2.0"
