--- a/vue-murex-frontend/package.json
+++ b/vue-murex-frontend/package.json
@@ -27,8 +27,10 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "autoprefixer": "^10.4.1",
+    "css-loader": "^4.2.0",
+    "node-sass": "^6.0.1",
     "postcss": "^8.4.4",
-    "sass": "^1.45.1",
+    "sass": "^1.49.0",
     "sass-loader": "^10.2.1"
   }
 }
