--- a/vue-murex-frontend/package.json
+++ b/vue-murex-frontend/package.json
@@ -1,39 +1,36 @@
 {
-  "name": "vue-nuxt-pro",
+  "name": "murex-frontend",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "preview": "nuxi preview"
+    "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.2.0",
     "core-js": "^3.19.3",
     "jw-vue-pagination": "^1.0.3",
-    "css-loader": "^4.2.0",
-    "nuxi": "^0.10.1",
-    "nuxi-edge": "^3.0.0-27338323.1e98259",
+    "murex-frontend": "file:",
     "nuxt": "^2.15.8",
-    "nuxt-edge": "latest",
     "nuxt-i18n": "^6.28.1",
-    "sass-loader": "^10.1.1",
-    "tailwindcss": "^2.2.16",
+    "pm2": "^5.1.2",
     "vue": "^2.6.14",
     "vue-carousel": "^0.18.0",
-    "vue-nuxt-pro": "file:",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@nuxt/bridge": "npm:@nuxt/bridge-edge@^3.0.0-27338323.1e98259",
     "@nuxtjs/style-resources": "^1.2.1",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "autoprefixer": "^10.4.1",
-    "postcss": "^8.4.5",
-    "sass": "^1.45.1"
+    "css-loader": "^4.2.0",
+    "node-sass": "^6.0.1",
+    "postcss": "^8.4.4",
+    "sass": "^1.49.0",
+    "sass-loader": "^10.2.1"
   }
 }
